# Copyright 2020 the Tectonic Project
# Licensed under the MIT License.

[package]
name = "tectonic_dep_support"
version = "0.0.0-dev.0"  # assigned with cranko (see README)
authors = ["Peter Williams <peter@newton.cx>"]
description = """
Support for finding third-party libraries using either pkg-config or vcpkg.
"""
homepage = "https://tectonic-typesetting.github.io/"
documentation = "https://docs.rs/tectonic_dep_support"
repository = "https://github.com/tectonic-typesetting/tectonic/"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
pkg-config = "^0.3"
# FIXME: THIS CANNOT SHIP LIKE THIS DO NOT MERGE WITH THIS HERE THIS IS JUST FOR TESTING
vcpkg = { version = "^0.2.11", git = "https://github.com/CraftSpider/vcpkg-rs/", branch = "expose-version" }
