# Copyright 2020-2021 the Tectonic Project
# Licensed under the MIT License.

# See README.md for discussion of features (or lack thereof) in this crate.

[package]
name = "tectonic_docmodel"
version = "0.2.2"
authors = ["Peter Williams <peter@newton.cx>"]
description = """
The Tectonic document model and its serialization into `Tectonic.toml`.
"""
homepage = "https://tectonic-typesetting.github.io/"
documentation = "https://docs.rs/tectonic_docmodel"
repository = "https://github.com/tectonic-typesetting/tectonic/"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
tectonic_errors = { path = "../errors", version =">=0.2.0,<1"}
toml = { version = "^0.7" }

[package.metadata.internal_dep_versions]
tectonic_errors = "5c9ba661edf5ef669f24f9904f99cca369d999e7"
