# Copyright 2020-2021 the Tectonic Project
# Licensed under the MIT License.

# See README.md for discussion of features (or lack thereof) in this crate.

lints.workspace = true

[package]
name = "tectonic_docmodel"
version = "0.0.0-dev.0"  # assigned with cranko (see README)
authors = ["Peter Williams <peter@newton.cx>"]
description = """
The Tectonic document model and its serialization into `Tectonic.toml`.
"""
homepage = "https://tectonic-typesetting.github.io/"
documentation = "https://docs.rs/tectonic_docmodel"
repository = "https://github.com/tectonic-typesetting/tectonic/"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
tectonic_errors = { path = "../errors", version = "0.0.0-dev.0" }
toml = { version = "^0.8" }

[package.metadata.internal_dep_versions]
tectonic_errors = "5c9ba661edf5ef669f24f9904f99cca369d999e7"
