# Copyright 2020-2021 the Tectonic Project
# Licensed under the MIT License.

# See README.md for discussion of features (or lack thereof) in this crate.

[package]
name = "tectonic_engine_bibtex"
version = "0.0.0-dev.0"  # assigned with cranko (see README)
authors = ["Peter Williams <peter@newton.cx>"]
description = """
The `bibtex` program as a reusable crate.
"""
homepage = "https://tectonic-typesetting.github.io/"
documentation = "https://docs.rs/tectonic_engine_bibtex"
repository = "https://github.com/tectonic-typesetting/tectonic/"
readme = "README.md"
license = "MIT"
edition = "2018"
links = "tectonic_engine_bibtex"

[dependencies]
libc = "^0.2"
tectonic_io_base = { path = "../io_base", version = '0.0.0-dev.0' }
tectonic_bridge_core = { path = "../bridge_core", version = "0.0.0-dev.0" }
tectonic_errors = { path = "../errors", version = "0.0.0-dev.0" }

[build-dependencies]
cc = "^1.0.66"

[package.metadata.internal_dep_versions]
tectonic_bridge_core = "thiscommit:2021-01-17:fohCh1sh"
tectonic_errors = "5c9ba661edf5ef669f24f9904f99cca369d999e7"
