# Copyright 2020 the Tectonic Project
# Licensed under the MIT License.

[package]
name = "tectonic_geturl"
version = "0.0.0-dev.0" # assigned with cranko (see README)
authors = ["Peter Williams <peter@newton.cx>"]
description = """
A generic interface for HTTP GETs and byte-range requests, with pluggable backends.
"""
homepage = "https://tectonic-typesetting.github.io/"
documentation = "https://docs.rs/tectonic_geturl"
repository = "https://github.com/tectonic-typesetting/tectonic/"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
tectonic_errors = { workspace = true }
tectonic_status_base = { workspace = true }

cfg-if = { workspace = true }
curl = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

[features]
default = ["reqwest"]
native-tls-vendored = ["reqwest/native-tls-vendored"]

[package.metadata.internal_dep_versions]
tectonic_errors = "e04798bcd9b1c1d68cc0a318a710bb30230a0300"
tectonic_status_base = "401387acfd98113133db6981c301426431f55ea3"
