# Copyright 2020 the Tectonic Project
# Licensed under the MIT License.

lints.workspace = true

[package]
name = "tectonic_geturl"
version = "0.0.0-dev.0"  # assigned with cranko (see README)
authors = ["Peter Williams <peter@newton.cx>"]
description = """
A generic interface for HTTP GETs and byte-range requests, with pluggable backends.
"""
homepage = "https://tectonic-typesetting.github.io/"
documentation = "https://docs.rs/tectonic_geturl"
repository = "https://github.com/tectonic-typesetting/tectonic/"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
cfg-if = "^1.0"
curl = { version = "^0.4", optional = true }
reqwest = { version = "^0.12", optional = true, features = ["blocking"] }
tectonic_errors = { path = "../errors", version = "0.0.0-dev.0" }
tectonic_status_base = { path = "../status_base", version = "0.0.0-dev.0" }

[features]
default = ["reqwest"]
native-tls-vendored = ["reqwest/native-tls-vendored"]

[package.metadata.internal_dep_versions]
tectonic_errors = "e04798bcd9b1c1d68cc0a318a710bb30230a0300"
tectonic_status_base = "401387acfd98113133db6981c301426431f55ea3"
