# Copyright 2020 the Tectonic Project
# Licensed under the MIT License.

[package]
name = "tectonic_io_base"
version = "0.4.3"
authors = ["Peter Williams <peter@newton.cx>"]
description = """
Basic types for Tectonic's pluggable I/O backend system
"""
homepage = "https://tectonic-typesetting.github.io/"
documentation = "https://docs.rs/tectonic_io_base"
repository = "https://github.com/tectonic-typesetting/tectonic/"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
app_dirs2 = "^2.3"
flate2 = { version = "^1.0.19", default-features = false, features = ["zlib"] }
libc = "^0.2" # for EISDIR :-(
sha2 = "^0.10" # for digest computations
thiserror = "1.0"
tectonic_errors = { path = "../errors", version =">=0.1.0,<1"}
tectonic_status_base = { path = "../status_base", version =">=0.1.0,<1"}

[package.metadata.internal_dep_versions]
tectonic_errors = "e04798bcd9b1c1d68cc0a318a710bb30230a0300"
tectonic_status_base = "401387acfd98113133db6981c301426431f55ea3"
