# Copyright 2020 the Tectonic Project
# Licensed under the MIT License.

[package]
name = "tectonic_io_base"
version = "0.0.0-dev.0" # assigned with cranko (see README)
authors = ["Peter Williams <peter@newton.cx>"]
description = """
Basic types for Tectonic's pluggable I/O backend system
"""
homepage = "https://tectonic-typesetting.github.io/"
documentation = "https://docs.rs/tectonic_io_base"
repository = "https://github.com/tectonic-typesetting/tectonic/"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
tectonic_errors = { workspace = true }
tectonic_status_base = { workspace = true }

app_dirs2 = { workspace = true }
flate2 = { workspace = true }
libc = { workspace = true }      # for EISDIR :-(
sha2 = { workspace = true }
thiserror = { workspace = true }


[package.metadata.internal_dep_versions]
tectonic_errors = "e04798bcd9b1c1d68cc0a318a710bb30230a0300"
tectonic_status_base = "401387acfd98113133db6981c301426431f55ea3"
