# Copyright 2020 the Tectonic Project
# Licensed under the MIT License.

lints.workspace = true

[package]
name = "tectonic_io_base"
version = "0.0.0-dev.0"  # assigned with cranko (see README)
authors = ["Peter Williams <peter@newton.cx>"]
description = """
Basic types for Tectonic's pluggable I/O backend system
"""
homepage = "https://tectonic-typesetting.github.io/"
documentation = "https://docs.rs/tectonic_io_base"
repository = "https://github.com/tectonic-typesetting/tectonic/"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
app_dirs2 = "^2.3"
flate2 = { version = "^1.0.19", default-features = false, features = ["zlib"] }
libc = "^0.2" # for EISDIR :-(
sha2 = "^0.10" # for digest computations
thiserror = "2.0"
tectonic_errors = { path = "../errors", version = "0.0.0-dev.0" }
tectonic_status_base = { path = "../status_base", version = "0.0.0-dev.0" }

[package.metadata.internal_dep_versions]
tectonic_errors = "e04798bcd9b1c1d68cc0a318a710bb30230a0300"
tectonic_status_base = "401387acfd98113133db6981c301426431f55ea3"
