lints.workspace = true

[package]
name = "tectonic_mac_core"
license = "MIT"
version = "0.0.0-dev.0"
edition = "2021"

[dependencies]
libc = "0.2"

[build-dependencies]
tectonic_cfg_support = { path = "../cfg_support", version = "0.0.0-dev.0" }

[package.metadata.internal_dep_versions]
tectonic_cfg_support = "thiscommit:aeRoo7oa"
