lints.workspace = true

[package]
name = "tectonic_mac_core"
license = "MIT"
version = "0.1.2"
edition = "2021"
description = """
Exposing macOS framework APIs to the Tectonic Rust code.
"""
homepage = "https://tectonic-typesetting.github.io/"
documentation = "https://docs.rs/tectonic_mac_core"
repository = "https://github.com/tectonic-typesetting/tectonic/"
readme = "README.md"

[dependencies]
libc = "0.2"

[build-dependencies]
tectonic_cfg_support = { path = "../cfg_support", version = ">=0.1.5,<1" }

[package.metadata.internal_dep_versions]
tectonic_cfg_support = "thiscommit:aeRoo7oa"
