# Copyright 2018-2019 the Tectonic Project
# Licensed under the MIT License.

lints.workspace = true

[package]
name = "tectonic_xdv"
version = "0.0.0-dev.0" # assigned with cranko (see README)
authors = ["Peter Williams <peter@newton.cx>"]
description = """
A decoder for the XDV and SPX file formats used by XeTeX and Tectonic.
"""
homepage = "https://tectonic-typesetting.github.io/"
documentation = "https://docs.rs/tectonic"
repository = "https://github.com/tectonic-typesetting/tectonic/"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
byteorder = "^1.4"

[dev-dependencies]
clap = { version = "4.5.1", features = ["cargo"] }
